Modification des propriétés du projet
Changement de la ligne d'include de la SFML pour un emplacement relatif
au projet.

--- a/JoueurDuGrenier/JoueurDuGrenier.vcxproj
+++ b/JoueurDuGrenier/JoueurDuGrenier.vcxproj
@@ -53,7 +53,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>SFML_STATIC;WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>D:\Documents\Programmes en cours d%27écriture\C++\JoueurDuGrenier\JoueurDuGrenier\SFML-2.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\SFML-2.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
